# bbmacrostrings

./: .gitignore  Cargo.toml  README.md
bbmacrostrings_derive/: Cargo.toml
bbmacrostrings_derive/src/: lib.rs
src/: lib.rs
