[package]
name = "bbmacrostrings_derive"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.70", features = ["extra-traits"] }
quote = "1.0.9"

[lib]
proc-macro = true